# nba-predictor

./: .gitignore  API_USAGE.md  CLAUDE.md  README.md  V2_0_QUICKSTART.md  main.py  pyproject.toml  run_api.py  test_api.py
notebooks/: 01_eda.ipynb  02_train_baseline.ipynb  03_feature_inspection.ipynb
scripts/: fetch_games.py  init_db.py  inspect_db.py  setup_v2_0.py
src/nba_predictor/: __init__.py  config.py  data_prep.py  evaluate.py  feature_engineering.py  predict.py  train_baseline.py  train_v1_1.py  train_v2_0.py
src/nba_predictor/api/: __init__.py  app.py  models.py  predictor.py
src/nba_predictor/data_fetcher/: __init__.py  balldontlie_client.py  config.py
src/nba_predictor/db/: __init__.py  connection.py  feature_computer.py  schema.py
